[gd_scene load_steps=34 format=4 uid="uid://5ctllddc4obb"]

[ext_resource type="PackedScene" uid="uid://b7pp5suyru2lf" path="res://scenes/menus/interactive_element.tscn" id="1_7wdxp"]
[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_hib26"]
[ext_resource type="TileSet" uid="uid://b35s45rp0yrck" path="res://scenes/menus/menu_tile_set.tres" id="1_jssq0"]
[ext_resource type="PackedScene" uid="uid://bwd7js17uny6q" path="res://scenes/desktop/desktop.tscn" id="2_kxbcg"]
[ext_resource type="Texture2D" uid="uid://1rpws7w7ml0u" path="res://assets/art/menu_components/StickyNoteTest-Sheet.png" id="3_ahnkd"]
[ext_resource type="Texture2D" uid="uid://7r8cut1jsvt0" path="res://assets/art/menu_components/Panel.png" id="3_janoq"]
[ext_resource type="TileSet" uid="uid://cumnmwk8n3qwe" path="res://scenes/menus/breakable_menu_tiles.tres" id="4_rruka"]
[ext_resource type="Texture2D" uid="uid://4damehrpitmi" path="res://assets/art/items/CrumpledPaper.png" id="4_ylyox"]
[ext_resource type="FontFile" uid="uid://bckbkknmti08k" path="res://assets/fonts/m6x11.ttf" id="5_2a3fy"]
[ext_resource type="Theme" uid="uid://fqhlidlvqsyl" path="res://assets/fonts/menu_buttons.tres" id="6_43f6x"]
[ext_resource type="Texture2D" uid="uid://y8wgjwjjrbhx" path="res://assets/art/menu_components/SmallStartButton.png" id="8_nhvuo"]
[ext_resource type="Texture2D" uid="uid://op2bmdwt6xln" path="res://assets/art/menu_components/Screw.png" id="8_yx54q"]
[ext_resource type="FontFile" uid="uid://beb6n1e5n8kuk" path="res://assets/fonts/antiquity-print.ttf" id="9_qhg6l"]
[ext_resource type="Texture2D" uid="uid://pvl4opjitbn6" path="res://assets/art/rigid_letters/Letters1.png" id="12_oif4b"]
[ext_resource type="PackedScene" uid="uid://lvqqxc7ln6wx" path="res://scenes/letters/running_letter.tscn" id="13_7j4n4"]
[ext_resource type="Texture2D" uid="uid://c7am4spqld716" path="res://assets/art/rigid_letters/Letters2.png" id="13_mlhma"]
[ext_resource type="Texture2D" uid="uid://rt1q2s47l33u" path="res://assets/art/rigid_letters/Letters3.png" id="14_7kfov"]
[ext_resource type="SpriteFrames" uid="uid://cjnjhykip21o5" path="res://assets/art/running_letters/running_s.tres" id="14_asqxe"]
[ext_resource type="Texture2D" uid="uid://c7buyymj4wbih" path="res://assets/art/rigid_letters/Letters4.png" id="15_1jtme"]
[ext_resource type="SpriteFrames" uid="uid://b15mmw4hxryyy" path="res://assets/art/running_letters/running_t.tres" id="15_8ipti"]
[ext_resource type="SpriteFrames" uid="uid://rftjcopnmkle" path="res://assets/art/running_letters/running_a.tres" id="16_pscsi"]
[ext_resource type="SpriteFrames" uid="uid://cycrm7f7m0ie8" path="res://assets/art/running_letters/running_r.tres" id="17_sxf8s"]
[ext_resource type="AudioStream" uid="uid://t76hd8ekf63" path="res://assets/audio/Select 1.wav" id="23_0uyfe"]

[sub_resource type="Animation" id="Animation_bex1y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_xpr53"]
resource_name = "sticky_note_animation"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n3yhk"]
_data = {
"RESET": SubResource("Animation_bex1y"),
"sticky_note_animation": SubResource("Animation_xpr53")
}

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2ej0i"]
bounce = 0.3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2u67"]
size = Vector2(1024, 384)

[sub_resource type="LabelSettings" id="LabelSettings_rnshd"]
font = ExtResource("9_qhg6l")
font_size = 39
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwsea"]
size = Vector2(60, 156)

[sub_resource type="CircleShape2D" id="CircleShape2D_jk44i"]
radius = 12.0

[sub_resource type="LabelSettings" id="LabelSettings_35xiq"]
font = ExtResource("5_2a3fy")
font_size = 96

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ppfed"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_hib26")

[node name="Desktop" parent="." instance=ExtResource("2_kxbcg")]
z_index = 0

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAMAAAABAAAAAAAAAAMAAAACAAAAAAAAAAMAAAADAAAAAAAAAAMAAAAEAAAAAAAAAAMAAAAFAAAAAAAAAAMAAAAGAAAAAAAAAAMAAAAHAAAAAAAAAAMAAAAIAAAAAAAAAAMAAAAJAAAAAAAAAAMAAAAKAAAAAAAAAAMAAAALAAAAAAAAAAMAAAAMAAAAAAAAAAMAAAANAAAAAAAAAAMAAAAOAAAAAAAAAAMAAAAPAAAAAAAAAAMAAAAQAAAAAAAAAAMAAAARAAAAAAAAAAMAAAASAAAAAAAAAAMAAAATAAAAAAAAAAMAAAAUAAAAAAAAAAMAAAAVAAAAAAAAAAMAAAAWAAAAAAAAAAMAAAAXAAAAAAAAAAMAAAAYAAAAAAAAAAMAAAAZAAAAAAAAAAMAAAAaAAAAAAAAAAMAAAAbAAAAAAAAAAMAAAAcAAAAAAAAAAMAAAAdAAAAAAAAAAMAAAAeAAAAAAAAAAMAAAAfAAAAAAAAAAMAAAAgAAAAAAAAAAMAAAAhAAAAAAAAAAMAAAAiAAAAAAAAAAMAAAAjAAAAAAAAAAMAAAAjABQAAAAAAAMAAAAAABQAAAAAAAMAAAAiABQAAAAAAAMAAAAhABQAAAAAAAMAAAAgABQAAAAAAAMAAAAfABQAAAAAAAMAAAAeABQAAAAAAAMAAAAdABQAAAAAAAMAAAAcABQAAAAAAAMAAAAbABQAAAAAAAMAAAAaABQAAAAAAAMAAAAZABQAAAAAAAMAAAAYABQAAAAAAAMAAAAXABQAAAAAAAMAAAAWABQAAAAAAAMAAAAVABQAAAAAAAMAAAAUABQAAAAAAAMAAAATABQAAAAAAAMAAAASABQAAAAAAAMAAAARABQAAAAAAAMAAAAQABQAAAAAAAMAAAAPABQAAAAAAAMAAAAOABQAAAAAAAMAAAANABQAAAAAAAMAAAAMABQAAAAAAAMAAAALABQAAAAAAAMAAAAKABQAAAAAAAMAAAAJABQAAAAAAAMAAAAIABQAAAAAAAMAAAAHABQAAAAAAAMAAAAGABQAAAAAAAMAAAAFABQAAAAAAAMAAAAEABQAAAAAAAMAAAADABQAAAAAAAMAAAACABQAAAAAAAMAAAABABQAAAAAAAMAAAAAAAEAAAAAAAMAAAAAAAIAAAAAAAMAAAAAAAMAAAAAAAMAAAAAAAQAAAAAAAMAAAAAAAUAAAAAAAMAAAAAAAYAAAAAAAMAAAAAAAcAAAAAAAMAAAAAAAgAAAAAAAMAAAAAAAkAAAAAAAMAAAAAAAoAAAAAAAMAAAAAAAsAAAAAAAMAAAAAAAwAAAAAAAMAAAAAAA0AAAAAAAMAAAAAAA4AAAAAAAMAAAAAAA8AAAAAAAMAAAAAABAAAAAAAAMAAAAAABEAAAAAAAMAAAAAABIAAAAAAAMAAAAAABMAAAAAAAMAAAAjAAEAAAAAAAMAAAAjAAIAAAAAAAMAAAAjAAMAAAAAAAMAAAAjAAQAAAAAAAMAAAAjAAUAAAAAAAMAAAAjAAYAAAAAAAMAAAAjAAcAAAAAAAMAAAAjAAgAAAAAAAMAAAAjAAkAAAAAAAMAAAAjAAoAAAAAAAMAAAAjAAsAAAAAAAMAAAAjAAwAAAAAAAMAAAAjAA0AAAAAAAMAAAAjAA4AAAAAAAMAAAAjAA8AAAAAAAMAAAAjABAAAAAAAAMAAAAjABEAAAAAAAMAAAAjABIAAAAAAAMAAAAjABMAAAAAAAMAAAAMAAIAAAACAAMAAQAMAAEAAAAAAAMAAAALAAEAAAAAAAMAAAAKAAEAAAAAAAMAAAAJAAEAAAAAAAMAAAAIAAEAAAAAAAMAAAAHAAEAAAAAAAMAAAAGAAEAAAAAAAMAAAAFAAEAAAAAAAMAAAAEAAEAAAAAAAMAAAADAAEAAAAAAAMAAAACAAEAAAAAAAMAAAABAAEAAAAAAAMAAAABAAIAAAAAAAMAAAABAAMAAAAAAAMAAAABAAQAAAAAAAMAAAABAAUAAAAAAAMAAAABAAYAAAAAAAMAAAABAAcAAAAAAAMAAAABAAgAAAAAAAMAAAABAAkAAAAAAAMAAAABAAoAAAAAAAMAAAABAAsAAAAAAAMAAAABAAwAAAAAAAMAAAABAA0AAAAAAAMAAAABAA4AAAAAAAMAAAABAA8AAAAAAAMAAAABABAAAAAAAAMAAAABABEAAAAAAAMAAAABABIAAAAAAAMAAAABABMAAAAAAAMAAAACABMAAAAAAAMAAAACABIAAAAAAAMAAAACABEAAAAAAAMAAAACABAAAAAAAAMAAAACAA8AAAAAAAMAAAACAA4AAAAAAAMAAAACAA0AAAABAAMAAwACAAwAAAACAAMABAACAAsAAAACAAMABAACAAoAAAACAAMABAACAAkAAAACAAMABAACAAgAAAACAAMABAACAAcAAAACAAMABAACAAYAAAACAAMABAACAAUAAAACAAMABAACAAQAAAACAAMABAACAAMAAAACAAMABAACAAIAAAABAAMAAQADAAIAAAACAAMAAQADAA0AAAACAAMAAwADAA4AAAAAAAMAAAADAA8AAAAAAAMAAAADABAAAAAAAAMAAAADABEAAAAAAAMAAAADABIAAAAAAAMAAAADABMAAAAAAAMAAAAEABMAAAAAAAMAAAAEABIAAAAAAAMAAAAEABEAAAAAAAMAAAAEABAAAAAAAAMAAAAEAA8AAAAAAAMAAAAEAA4AAAAAAAMAAAAEAA0AAAACAAMAAwAEAAIAAAACAAMAAQAFAAIAAAACAAMAAQAFAA0AAAACAAMAAwAFAA4AAAAAAAMAAAAFAA8AAAAAAAMAAAAFABAAAAAAAAMAAAAFABEAAAAAAAMAAAAFABIAAAAAAAMAAAAFABMAAAAAAAMAAAAGABMAAAAAAAMAAAAGABIAAAAAAAMAAAAGABEAAAAAAAMAAAAGABAAAAAAAAMAAAAGAA8AAAAAAAMAAAAGAA4AAAAAAAMAAAAGAA0AAAACAAMAAwAGAAIAAAACAAMAAQAHAAIAAAACAAMAAQAHAA0AAAACAAMAAwAHAA4AAAAAAAMAAAAHAA8AAAAAAAMAAAAHABAAAAAAAAMAAAAHABEAAAAAAAMAAAAHABIAAAAAAAMAAAAHABMAAAAAAAMAAAAIABMAAAAAAAMAAAAIABIAAAAAAAMAAAAIABEAAAAAAAMAAAAIABAAAAAAAAMAAAAIAA8AAAAAAAMAAAAIAA4AAAAAAAMAAAAIAA0AAAACAAMAAwAIAAIAAAACAAMAAQAJAAIAAAACAAMAAQAJAA0AAAACAAMAAwAJAA4AAAAAAAMAAAAJAA8AAAAAAAMAAAAJABAAAAAAAAMAAAAJABEAAAAAAAMAAAAJABIAAAAAAAMAAAAJABMAAAAAAAMAAAAKABMAAAAAAAMAAAAKABIAAAAAAAMAAAAKABEAAAAAAAMAAAAKABAAAAAAAAMAAAAKAA8AAAAAAAMAAAAKAA4AAAAAAAMAAAAKAA0AAAACAAMAAwAKAAIAAAACAAMAAQALAAIAAAACAAMAAQALAA0AAAACAAMAAwALAA4AAAAAAAMAAAALAA8AAAAAAAMAAAALABAAAAAAAAMAAAALABEAAAAAAAMAAAALABIAAAAAAAMAAAALABMAAAAAAAMAAAAMABMAAAAAAAMAAAAMABIAAAAAAAMAAAAMABEAAAAAAAMAAAAMABAAAAAAAAMAAAAMAA8AAAAAAAMAAAAMAA4AAAAAAAMAAAAMAA0AAAACAAMAAwANAA0AAAACAAMAAwANAAIAAAACAAMAAQANAAEAAAAAAAMAAAAOAAEAAAAAAAMAAAAOAAIAAAACAAMAAQAOAA0AAAACAAMAAwAOAA4AAAAAAAMAAAANAA4AAAAAAAMAAAANAA8AAAAAAAMAAAANABAAAAAAAAMAAAANABEAAAAAAAMAAAANABIAAAAAAAMAAAANABMAAAAAAAMAAAAOABMAAAAAAAMAAAAOABIAAAAAAAMAAAAOABEAAAAAAAMAAAAOABAAAAAAAAMAAAAOAA8AAAAAAAMAAAAPAA8AAAAAAAMAAAAPAA4AAAAAAAMAAAAPAA0AAAACAAMAAwAPAAIAAAACAAMAAQAPAAEAAAAAAAMAAAAQAAEAAAAAAAMAAAAQAAIAAAACAAMAAQAQAA0AAAACAAMAAwAQAA4AAAAAAAMAAAAQAA8AAAAAAAMAAAAQABAAAAAAAAMAAAAPABAAAAAAAAMAAAAPABEAAAAAAAMAAAAPABIAAAAAAAMAAAAPABMAAAAAAAMAAAAQABMAAAAAAAMAAAAQABIAAAAAAAMAAAAQABEAAAAAAAMAAAARABEAAAAAAAMAAAARABAAAAAAAAMAAAARAA8AAAAAAAMAAAARAA4AAAAAAAMAAAARAA0AAAACAAMAAwARAAIAAAACAAMAAQARAAEAAAAAAAMAAAASAAEAAAAAAAMAAAASAAIAAAACAAMAAQASAA0AAAACAAMAAwASAA4AAAAAAAMAAAASAA8AAAAAAAMAAAASABAAAAAAAAMAAAASABEAAAAAAAMAAAASABIAAAAAAAMAAAARABIAAAAAAAMAAAARABMAAAAAAAMAAAASABMAAAAAAAMAAAATABMAAAAAAAMAAAATABIAAAAAAAMAAAATABEAAAAAAAMAAAATABAAAAAAAAMAAAATAA8AAAAAAAMAAAATAA4AAAAAAAMAAAATAA0AAAACAAMAAwATAAIAAAACAAMAAQATAAEAAAAAAAMAAAAUAAEAAAAAAAMAAAAUAAIAAAACAAMAAQAUAA0AAAACAAMAAwAUAA4AAAAAAAMAAAAUAA8AAAAAAAMAAAAUABAAAAAAAAMAAAAUABEAAAAAAAMAAAAUABIAAAAAAAMAAAAUABMAAAAAAAMAAAAVABMAAAAAAAMAAAAVABIAAAAAAAMAAAAVABEAAAAAAAMAAAAVABAAAAAAAAMAAAAVAA8AAAAAAAMAAAAVAA4AAAAAAAMAAAAVAA0AAAACAAMAAwAVAAIAAAACAAMAAQAVAAEAAAAAAAMAAAAWAAEAAAAAAAMAAAAWAAIAAAACAAMAAQAWAA0AAAACAAMAAwAWAA4AAAAAAAMAAAAWAA8AAAAAAAMAAAAWABAAAAAAAAMAAAAWABEAAAAAAAMAAAAWABIAAAAAAAMAAAAWABMAAAAAAAMAAAAXABMAAAAAAAMAAAAXABIAAAAAAAMAAAAXABEAAAAAAAMAAAAXABAAAAAAAAMAAAAXAA8AAAAAAAMAAAAXAA4AAAAAAAMAAAAXAA0AAAACAAMAAwAXAAIAAAACAAMAAQAXAAEAAAAAAAMAAAAYAAEAAAAAAAMAAAAYAAIAAAACAAMAAQAYAA0AAAACAAMAAwAYAA4AAAAAAAMAAAAYAA8AAAAAAAMAAAAYABAAAAAAAAMAAAAYABEAAAAAAAMAAAAYABIAAAAAAAMAAAAYABMAAAAAAAMAAAAZABMAAAAAAAMAAAAZABIAAAAAAAMAAAAZABEAAAAAAAMAAAAZABAAAAAAAAMAAAAZAA8AAAAAAAMAAAAZAA4AAAAAAAMAAAAZAA0AAAACAAMAAwAZAAIAAAACAAMAAQAZAAEAAAAAAAMAAAAaAAEAAAAAAAMAAAAaAAIAAAACAAMAAQAaAA0AAAACAAMAAwAaAA4AAAAAAAMAAAAaAA8AAAAAAAMAAAAaABAAAAAAAAMAAAAaABEAAAAAAAMAAAAaABIAAAAAAAMAAAAaABMAAAAAAAMAAAAbABMAAAAAAAMAAAAbABIAAAAAAAMAAAAbABEAAAAAAAMAAAAbABAAAAAAAAMAAAAbAA8AAAAAAAMAAAAbAA4AAAAAAAMAAAAbAA0AAAACAAMAAwAbAAIAAAACAAMAAQAbAAEAAAAAAAMAAAAcAAEAAAAAAAMAAAAcAAIAAAACAAMAAQAcAA0AAAACAAMAAwAcAA4AAAAAAAMAAAAcAA8AAAAAAAMAAAAcABAAAAAAAAMAAAAcABEAAAAAAAMAAAAcABIAAAAAAAMAAAAcABMAAAAAAAMAAAAdABMAAAAAAAMAAAAdABIAAAAAAAMAAAAdABEAAAAAAAMAAAAdABAAAAAAAAMAAAAdAA8AAAAAAAMAAAAdAA4AAAAAAAMAAAAdAA0AAAACAAMAAwAdAAIAAAACAAMAAQAdAAEAAAAAAAMAAAAeAAEAAAAAAAMAAAAeAAIAAAACAAMAAQAeAA0AAAACAAMAAwAeAA4AAAAAAAMAAAAeAA8AAAAAAAMAAAAeABAAAAAAAAMAAAAeABEAAAAAAAMAAAAeABIAAAAAAAMAAAAeABMAAAAAAAMAAAAfABMAAAAAAAMAAAAfABIAAAAAAAMAAAAfABEAAAAAAAMAAAAfABAAAAAAAAMAAAAfAA8AAAAAAAMAAAAfAA4AAAAAAAMAAAAfAA0AAAACAAMAAwAfAAIAAAACAAMAAQAfAAEAAAAAAAMAAAAgAAEAAAAAAAMAAAAgAAIAAAACAAMAAQAgAA0AAAACAAMAAwAgAA4AAAAAAAMAAAAgAA8AAAAAAAMAAAAgABAAAAAAAAMAAAAgABEAAAAAAAMAAAAgABIAAAAAAAMAAAAgABMAAAAAAAMAAAAhABMAAAAAAAMAAAAhABIAAAAAAAMAAAAhABEAAAAAAAMAAAAhABAAAAAAAAMAAAAhAA8AAAAAAAMAAAAhAA0AAAABAAMABAAhAAwAAAACAAMAAgAhAAsAAAACAAMAAgAhAAoAAAACAAMAAgAhAAkAAAACAAMAAgAhAAgAAAACAAMAAgAhAAcAAAACAAMAAgAhAAYAAAACAAMAAgAhAAUAAAACAAMAAgAhAAQAAAACAAMAAgAhAAMAAAACAAMAAgAhAAIAAAABAAMAAgAhAAEAAAAAAAMAAAAiAAEAAAAAAAMAAAAiAAIAAAAAAAMAAAAiAAMAAAAAAAMAAAAiAAQAAAAAAAMAAAAiAAUAAAAAAAMAAAAiAAYAAAAAAAMAAAAiAAcAAAAAAAMAAAAiAAgAAAAAAAMAAAAiAAkAAAAAAAMAAAAiAAoAAAAAAAMAAAAiAAsAAAAAAAMAAAAiAAwAAAAAAAMAAAAiAA0AAAAAAAMAAAAiAA4AAAAAAAMAAAAiAA8AAAAAAAMAAAAiABAAAAAAAAMAAAAiABEAAAAAAAMAAAAiABIAAAAAAAMAAAAiABMAAAAAAAMAAAAhAA4AAAAAAAMAAAA=")
tile_set = ExtResource("1_jssq0")

[node name="Boarder" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAjAAAAAAAAAAAAAAAiAAAAAAAAAAAAAAAhAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAfAAAAAAAAAAAAAAAeAAAAAAAAAAAAAAAdAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAATAAAAAAAAAAAAAAASAAAAAAAAAAAAAAARAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAAAABAAAAAAAAAAAAAAABEAAAAAAAAAAAAAABIAAAAAAAAAAAAAABMAAAAAAAAAAAAAABQAAAAAAAAAAAABABQAAAAAAAAAAAACABQAAAAAAAAAAAADABQAAAAAAAAAAAAEABQAAAAAAAAAAAAFABQAAAAAAAAAAAAGABQAAAAAAAAAAAAHABQAAAAAAAAAAAAIABQAAAAAAAAAAAAJABQAAAAAAAAAAAAKABQAAAAAAAAAAAALABQAAAAAAAAAAAAMABQAAAAAAAAAAAANABQAAAAAAAAAAAAOABQAAAAAAAAAAAAPABQAAAAAAAAAAAAQABQAAAAAAAAAAAARABQAAAAAAAAAAAASABQAAAAAAAAAAAATABQAAAAAAAAAAAAUABQAAAAAAAAAAAAVABQAAAAAAAAAAAAWABQAAAAAAAAAAAAXABQAAAAAAAAAAAAYABQAAAAAAAAAAAAZABQAAAAAAAAAAAAaABQAAAAAAAAAAAAbABQAAAAAAAAAAAAcABQAAAAAAAAAAAAdABQAAAAAAAAAAAAeABQAAAAAAAAAAAAfABQAAAAAAAAAAAAgABQAAAAAAAAAAAAhABQAAAAAAAAAAAAiABQAAAAAAAAAAAAjABQAAAAAAAAAAAAjABMAAAAAAAAAAAAjABEAAAAAAAAAAAAjABAAAAAAAAAAAAAjAA8AAAAAAAAAAAAjAAoAAAAAAAAAAAAjAAkAAAAAAAAAAAAjAAgAAAAAAAAAAAAjAAcAAAAAAAAAAAAjAAYAAAAAAAAAAAAjAAUAAAAAAAAAAAAjAAQAAAAAAAAAAAAjAAMAAAAAAAAAAAAjAAIAAAAAAAAAAAAjAAEAAAAAAAAAAAABABMAAAAAAAAAAAACABMAAAAAAAAAAAADABMAAAAAAAAAAAAEABMAAAAAAAAAAAAFABMAAAAAAAAAAAAGABMAAAAAAAAAAAAHABMAAAAAAAAAAAAIABMAAAAAAAAAAAAJABMAAAAAAAAAAAAKABMAAAAAAAAAAAALABMAAAAAAAAAAAAMABMAAAAAAAAAAAANABMAAAAAAAAAAAAOABMAAAAAAAAAAAAPABMAAAAAAAAAAAAQABMAAAAAAAAAAAARABMAAAAAAAAAAAASABMAAAAAAAAAAAATABMAAAAAAAAAAAAUABMAAAAAAAAAAAAVABMAAAAAAAAAAAAWABMAAAAAAAAAAAAXABMAAAAAAAAAAAAYABMAAAAAAAAAAAAZABMAAAAAAAAAAAAaABMAAAAAAAAAAAAbABMAAAAAAAAAAAAcABMAAAAAAAAAAAAdABMAAAAAAAAAAAAeABMAAAAAAAAAAAAfABMAAAAAAAAAAAAgABMAAAAAAAAAAAAhABMAAAAAAAAAAAAiABMAAAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAD//w0AAAAAAAAAAAD//w4AAAAAAAAAAAD//w8AAAAAAAAAAAD//xAAAAAAAAAAAAD//xEAAAAAAAAAAAD//xIAAAAAAAAAAAD//xMAAAAAAAAAAAD//xQAAAAAAAAAAAD//xUAAAAAAAAAAAAjABUAAAAAAAAAAAAiABUAAAAAAAAAAAAhABUAAAAAAAAAAAAgABUAAAAAAAAAAAAfABUAAAAAAAAAAAAeABUAAAAAAAAAAAAdABUAAAAAAAAAAAAcABUAAAAAAAAAAAAbABUAAAAAAAAAAAAaABUAAAAAAAAAAAAZABUAAAAAAAAAAAAYABUAAAAAAAAAAAAXABUAAAAAAAAAAAAWABUAAAAAAAAAAAAVABUAAAAAAAAAAAAUABUAAAAAAAAAAAATABUAAAAAAAAAAAASABUAAAAAAAAAAAARABUAAAAAAAAAAAAQABUAAAAAAAAAAAAPABUAAAAAAAAAAAAOABUAAAAAAAAAAAANABUAAAAAAAAAAAAMABUAAAAAAAAAAAALABUAAAAAAAAAAAAKABUAAAAAAAAAAAAJABUAAAAAAAAAAAAIABUAAAAAAAAAAAAHABUAAAAAAAAAAAAGABUAAAAAAAAAAAAFABUAAAAAAAAAAAAEABUAAAAAAAAAAAADABUAAAAAAAAAAAACABUAAAAAAAAAAAABABUAAAAAAAAAAAAAABUAAAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAARAP//AAAAAAAAAAASAP//AAAAAAAAAAATAP//AAAAAAAAAAAUAP//AAAAAAAAAAAVAP//AAAAAAAAAAAWAP//AAAAAAAAAAAXAP//AAAAAAAAAAAYAP//AAAAAAAAAAAZAP//AAAAAAAAAAAaAP//AAAAAAAAAAAbAP//AAAAAAAAAAAcAP//AAAAAAAAAAAdAP//AAAAAAAAAAAeAP//AAAAAAAAAAAfAP//AAAAAAAAAAAgAP//AAAAAAAAAAAhAP//AAAAAAAAAAAiAP//AAAAAAAAAAAjAP//AAAAAAAAAAAjAAsAAAAAAAAAAAAjAA0AAAAAAAAAAAAjAA4AAAAAAAAAAAAjAAwAAAAAAAAAAAA=")
tile_set = ExtResource("1_jssq0")

[node name="BreakableBlocks" type="TileMapLayer" parent="." groups=["BreakableBlocks"]]
tile_map_data = PackedByteArray("AABGACQAAAAGAAEAAABHACQAAAAGAAEAAABHACUAAAAGAAEAAABGACUAAAAGAAEAAAA=")
tile_set = ExtResource("4_rruka")

[node name="InteractiveElements" type="Node2D" parent="."]

[node name="StickyNote" type="Sprite2D" parent="InteractiveElements"]
position = Vector2(184, 336)
texture = ExtResource("3_ahnkd")
hframes = 15
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="InteractiveElements/StickyNote"]
libraries = {
"": SubResource("AnimationLibrary_n3yhk")
}
autoplay = "sticky_note_animation"

[node name="CrumpledStickyNote" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
visible = false
position = Vector2(184, 328)
collision_layer = 16
physics_material_override = SubResource("PhysicsMaterial_2ej0i")

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/CrumpledStickyNote"]
texture = ExtResource("4_ylyox")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="InteractiveElements/CrumpledStickyNote"]
polygon = PackedVector2Array(8, -45, 16, -35, 24, -34, 43, -30, 43, -20, 46, -18, 43, -11, 40, -3, 46, 7, 42, 15, 38, 20, 39, 27, 38, 35, 28, 41, 21, 46, 5, 42, 0, 42, -13, 47, -22, 42, -31, 47, -36, 43, -38, 33, -35, 28, -37, 19, -46, -2, -46, -14, -40, -22, -39, -25, -39, -31, -32, -37, -30, -40, -26, -40, -19, -36, -12, -39, -9, -40, 0, -43)

[node name="Panel" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
collision_layer = 2
break_shake_strength = 25.0

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/Panel"]
position = Vector2(576, 256)
texture = ExtResource("3_janoq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/Panel"]
position = Vector2(576, 256)
shape = SubResource("RectangleShape2D_p2u67")

[node name="Title" type="Label" parent="InteractiveElements/Panel"]
offset_left = 64.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 362.0
text = "THE  SEARCH  FOR  THE
SECRET  SAPPHIRE"
label_settings = SubResource("LabelSettings_rnshd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
position = Vector2(576, 384)
collision_layer = 2
break_shake_strength = 30.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/StartButton"]
texture = ExtResource("8_nhvuo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/StartButton"]
position = Vector2(0, 3.05176e-05)
rotation = 1.57079
shape = SubResource("RectangleShape2D_nwsea")

[node name="Screw1" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
position = Vector2(96, 96)
collision_layer = 2
detatch_shake_strength = 5.0
break_shake_strength = 0.0
break_shake_fade = 0.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/Screw1"]
texture = ExtResource("8_yx54q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/Screw1"]
shape = SubResource("CircleShape2D_jk44i")

[node name="Screw2" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
position = Vector2(1056, 96)
collision_layer = 2
detatch_shake_strength = 5.0
break_shake_strength = 0.0
break_shake_fade = 0.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/Screw2"]
texture = ExtResource("8_yx54q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/Screw2"]
shape = SubResource("CircleShape2D_jk44i")

[node name="Screw3" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
position = Vector2(96, 416)
collision_layer = 2
detatch_shake_strength = 5.0
break_shake_strength = 0.0
break_shake_fade = 0.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/Screw3"]
texture = ExtResource("8_yx54q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/Screw3"]
shape = SubResource("CircleShape2D_jk44i")

[node name="Screw4" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
position = Vector2(1056, 416)
collision_layer = 2
detatch_shake_strength = 5.0
break_shake_strength = 0.0
break_shake_fade = 0.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/Screw4"]
texture = ExtResource("8_yx54q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/Screw4"]
shape = SubResource("CircleShape2D_jk44i")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_top = 175

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = " "
label_settings = SubResource("LabelSettings_35xiq")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 208

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("6_43f6x")
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_focus_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ppfed")
text = "SETTINGS"
flat = true

[node name="RigidLetters" type="Node2D" parent="."]
visible = false

[node name="S" parent="RigidLetters" instance=ExtResource("1_7wdxp")]
position = Vector2(519, 576)
collision_layer = 4
collision_mask = 5
breakable = false
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="RigidLetters/S"]
texture = ExtResource("12_oif4b")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidLetters/S"]
polygon = PackedVector2Array(-12, -11, -7, -16, 7, -16, 12, -11, 12, -9, 10, -7, 8, -7, 5, -10, -5, -10, -6, -9, -6, -4, -5, -3, 7, -3, 12, 2, 12, 10, 6, 16, -7, 16, -12, 11, -12, 9, -10, 7, -8, 7, -5, 10, 5, 10, 6, 9, 6, 4, 5, 3, -7, 3, -12, -2)

[node name="T1" parent="RigidLetters" instance=ExtResource("1_7wdxp")]
position = Vector2(546, 576)
collision_layer = 4
collision_mask = 5
breakable = false
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="RigidLetters/T1"]
texture = ExtResource("13_mlhma")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidLetters/T1"]
polygon = PackedVector2Array(-10, -16, 10, -16, 13, -13, 10, -10, 3, -10, 3, 14, 1, 16, -1, 16, -3, 14, -3, -10, -10, -10, -13, -13)

[node name="A1" parent="RigidLetters" instance=ExtResource("1_7wdxp")]
position = Vector2(569, 576)
collision_layer = 4
collision_mask = 5
breakable = false
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="RigidLetters/A1"]
texture = ExtResource("14_7kfov")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidLetters/A1"]
polygon = PackedVector2Array(1, -16, 16, 13, 16, 15, 15, 16, 11, 16, 7, 7, -7, 7, -11, 16, -15, 16, -16, 15, -16, 13, -1, -16)

[node name="R" parent="RigidLetters" instance=ExtResource("1_7wdxp")]
position = Vector2(597, 576)
collision_layer = 4
collision_mask = 5
breakable = false
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="RigidLetters/R"]
texture = ExtResource("15_1jtme")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidLetters/R"]
polygon = PackedVector2Array(-7, -16, 5, -16, 10, -11, 10, -2, 7, 1, 11, 14, 9, 16, 7, 16, 5, 14, 2, 4, -4, 4, -4, 14, -6, 16, -8, 16, -10, 14, -10, -13)

[node name="T2" parent="RigidLetters" instance=ExtResource("1_7wdxp")]
position = Vector2(622, 576)
collision_layer = 4
collision_mask = 5
breakable = false
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="RigidLetters/T2"]
texture = ExtResource("13_mlhma")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidLetters/T2"]
polygon = PackedVector2Array(-10, -16, 10, -16, 13, -13, 10, -10, 3, -10, 3, 14, 1, 16, -1, 16, -3, 14, -3, -10, -10, -10, -13, -13)

[node name="RunningLetters" type="Node2D" parent="."]

[node name="S" parent="RunningLetters" instance=ExtResource("13_7j4n4")]
visible = false
position = Vector2(125, 538)
sprite_frames = ExtResource("14_asqxe")

[node name="T1" parent="RunningLetters" instance=ExtResource("13_7j4n4")]
visible = false
position = Vector2(284, 543)
sprite_frames = ExtResource("15_8ipti")

[node name="A1" parent="RunningLetters" instance=ExtResource("13_7j4n4")]
visible = false
position = Vector2(373, 537)
sprite_frames = ExtResource("16_pscsi")

[node name="R" parent="RunningLetters" instance=ExtResource("13_7j4n4")]
visible = false
position = Vector2(716, 535)
sprite_frames = ExtResource("17_sxf8s")

[node name="T2" parent="RunningLetters" instance=ExtResource("13_7j4n4")]
visible = false
position = Vector2(895, 508)
sprite_frames = ExtResource("15_8ipti")

[node name="CreditContainer" type="MarginContainer" parent="."]
offset_left = 760.0
offset_top = 572.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="Credit" type="Label" parent="CreditContainer"]
layout_mode = 2
theme = ExtResource("6_43f6x")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Created by @QuietLantern"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Sound" type="Node2D" parent="."]

[node name="SelectNoise" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("23_0uyfe")

[connection signal="a_collected" from="Desktop" to="." method="_on_desktop_a_collected"]
[connection signal="hammer_man_escaped" from="Desktop" to="." method="_on_desktop_hammer_man_escaped"]
[connection signal="hammer_man_level_changed" from="Desktop" to="." method="_on_desktop_hammer_man_level_changed"]
[connection signal="s_collected" from="Desktop" to="." method="_on_desktop_s_collected"]
[connection signal="click" from="InteractiveElements/CrumpledStickyNote" to="." method="_on_crumpled_sticky_note_click"]
[connection signal="smash" from="InteractiveElements/Panel" to="." method="_on_panel_smash"]
[connection signal="click" from="InteractiveElements/StartButton" to="." method="_on_start_button_click"]
[connection signal="mouse_entered" from="InteractiveElements/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="InteractiveElements/StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="smash" from="InteractiveElements/StartButton" to="." method="_on_start_button_smash"]
[connection signal="click" from="InteractiveElements/Screw1" to="." method="_on_screw_1_click"]
[connection signal="click" from="InteractiveElements/Screw2" to="." method="_on_screw_2_click"]
[connection signal="click" from="InteractiveElements/Screw3" to="." method="_on_screw_3_click"]
[connection signal="click" from="InteractiveElements/Screw4" to="." method="_on_screw_4_click"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
